# stable-fluids

./: config.py  convert.py  example.py  flows.py  fluid.py  generate_flows.py  pyproject.toml
